// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TreeDataProvider getChildNodes returns presentation manager result 1`] = `
Array [
  Object {
    "checkBoxState": 0,
    "description": "",
    "displayCheckBox": true,
    "extendedData": Object {
      "key": Object {
        "instanceKey": Object {
          "className": "Specialist",
          "id": "0xdece000000df9b",
        },
        "pathFromRoot": Array [
          "1174cf69-1c86-4639-b762-a6c7177b413a",
          "a82a1d6b-7662-44db-84a0-2f30eb96766a",
        ],
        "type": "ECInstanceNode",
      },
    },
    "hasChildren": true,
    "id": "a82a1d6b-7662-44db-84a0-2f30eb96766a/1174cf69-1c86-4639-b762-a6c7177b413a",
    "isCheckBoxEnabled": false,
    "label": "orange",
    "labelBackColor": -1598776577,
    "labelBold": false,
    "labelForeColor": undefined,
    "labelItalic": false,
    "parentId": "5784aabc-4961-4ecf-a0d7-979d0b9c0ad3",
  },
  Object {
    "checkBoxState": 1,
    "description": "",
    "displayCheckBox": false,
    "extendedData": Object {
      "key": Object {
        "instanceKey": Object {
          "className": "Manager",
          "id": "0x1196a00000172ed",
        },
        "pathFromRoot": Array [
          "5f4366dd-35f1-4bda-8dfc-430d1563a0ed",
          "148dd535-3dae-4e7e-b5a5-4a091ca80d9d",
        ],
        "type": "ECInstanceNode",
      },
    },
    "hasChildren": false,
    "id": "148dd535-3dae-4e7e-b5a5-4a091ca80d9d/5f4366dd-35f1-4bda-8dfc-430d1563a0ed",
    "isCheckBoxEnabled": false,
    "label": "Kroon",
    "labelBackColor": undefined,
    "labelBold": false,
    "labelForeColor": undefined,
    "labelItalic": false,
    "parentId": "5784aabc-4961-4ecf-a0d7-979d0b9c0ad3",
  },
]
`;

exports[`TreeDataProvider getFilteredNodes returns presentation manager result 1`] = `
Array [
  Object {
    "children": Array [],
    "index": 841,
    "isMarked": false,
    "node": Object {
      "backColor": "rgb(
    32,
    198,
    46
  )",
      "description": undefined,
      "foreColor": "#970E90",
      "hasChildren": false,
      "isCheckboxEnabled": false,
      "isCheckboxVisible": true,
      "isChecked": false,
      "isEditable": true,
      "isExpanded": false,
      "isSelectable": true,
      "key": Object {
        "instanceKey": Object {
          "className": "Taka",
          "id": "0xe0610000013f37",
        },
        "pathFromRoot": Array [
          "e4e25571-05b9-4034-8bb1-b7e5e34bee89",
          "3267e90a-8528-4b85-8ec0-2dd87fe4a098",
        ],
        "type": "ECInstanceNode",
      },
      "label": "Movies plum",
    },
  },
  Object {
    "children": Array [],
    "index": 992,
    "isMarked": true,
    "node": Object {
      "backColor": "rgb(
    238,
    33,
    44
  )",
      "description": "Et dolorem dolorum quasi quia hic sit libero deserunt non.",
      "foreColor": "#36C0D2",
      "hasChildren": true,
      "isCheckboxEnabled": true,
      "isCheckboxVisible": false,
      "isChecked": true,
      "isEditable": false,
      "isExpanded": false,
      "isSelectable": false,
      "key": Object {
        "instanceKey": Object {
          "className": "Extended",
          "id": "0x4081000000a62f",
        },
        "pathFromRoot": Array [
          "7c2dc083-a9d7-4f77-8e8f-8a394442664d",
          "12027c22-44b3-4f70-b5dc-2845797cdfdf",
        ],
        "type": "ECInstanceNode",
      },
      "label": "Mauritius Rupee lime North Carolina",
    },
  },
]
`;

exports[`TreeDataProvider getNodes children returns presentation manager result 1`] = `
Array [
  Object {
    "checkBoxState": 0,
    "description": "Ratione voluptatem repellendus sint rerum quod.",
    "displayCheckBox": false,
    "extendedData": Object {
      "key": Object {
        "instanceKey": Object {
          "className": "Agent",
          "id": "0x39e000000e397",
        },
        "pathFromRoot": Array [
          "a8879663-af4c-4647-a5e6-6399295a54e2",
          "1ab590b3-34ae-4253-b592-8504ca89d679",
        ],
        "type": "ECInstanceNode",
      },
    },
    "hasChildren": true,
    "id": "1ab590b3-34ae-4253-b592-8504ca89d679/a8879663-af4c-4647-a5e6-6399295a54e2",
    "isCheckBoxEnabled": true,
    "label": "Executive",
    "labelBackColor": undefined,
    "labelBold": false,
    "labelForeColor": 2050433535,
    "labelItalic": false,
    "parentId": "cfa5b4da-3271-4b2d-a97b-279993a4436c",
  },
  Object {
    "checkBoxState": 1,
    "description": "",
    "displayCheckBox": true,
    "extendedData": Object {
      "key": Object {
        "instanceKey": Object {
          "className": "Practical Plastic Fish",
          "id": "0x17dfb0000004a94",
        },
        "pathFromRoot": Array [
          "53634882-9809-4817-bdb7-62e5377376d7",
          "efbbdf5e-70a4-4764-860c-82aebaa5384c",
        ],
        "type": "ECInstanceNode",
      },
    },
    "hasChildren": true,
    "id": "efbbdf5e-70a4-4764-860c-82aebaa5384c/53634882-9809-4817-bdb7-62e5377376d7",
    "isCheckBoxEnabled": true,
    "label": "Cambridgeshire reboot",
    "labelBackColor": 1592423167,
    "labelBold": false,
    "labelForeColor": undefined,
    "labelItalic": false,
    "parentId": "cfa5b4da-3271-4b2d-a97b-279993a4436c",
  },
]
`;

exports[`TreeDataProvider getNodes root returns presentation manager result 1`] = `
Array [
  Object {
    "checkBoxState": 1,
    "description": "",
    "displayCheckBox": true,
    "extendedData": Object {
      "key": Object {
        "instanceKey": Object {
          "className": "benchmark",
          "id": "0xb4930000007f5e",
        },
        "pathFromRoot": Array [
          "4689e684-8ae5-4ef5-8f6e-931fa4685cc1",
          "4189a138-287e-4887-8294-0a6f4fc635a3",
        ],
        "type": "ECInstanceNode",
      },
    },
    "hasChildren": true,
    "id": "4189a138-287e-4887-8294-0a6f4fc635a3/4689e684-8ae5-4ef5-8f6e-931fa4685cc1",
    "isCheckBoxEnabled": true,
    "label": "multi-state payment",
    "labelBackColor": 81687551,
    "labelBold": false,
    "labelForeColor": -1776365569,
    "labelItalic": false,
    "parentId": undefined,
  },
  Object {
    "checkBoxState": 0,
    "description": "Eum quidem reiciendis veniam sunt sunt.",
    "displayCheckBox": true,
    "extendedData": Object {
      "key": Object {
        "instanceKey": Object {
          "className": "national",
          "id": "0x37190000000e92",
        },
        "pathFromRoot": Array [
          "c0ad3c15-e225-48d9-9174-cf691c86639b",
          "762a6c71-77b4-413a-a82a-1d6b76624dbc",
        ],
        "type": "ECInstanceNode",
      },
    },
    "hasChildren": true,
    "id": "762a6c71-77b4-413a-a82a-1d6b76624dbc/c0ad3c15-e225-48d9-9174-cf691c86639b",
    "isCheckBoxEnabled": true,
    "label": "Assimilated International Investment Account",
    "labelBackColor": undefined,
    "labelBold": false,
    "labelForeColor": 633948927,
    "labelItalic": false,
    "parentId": undefined,
  },
]
`;

exports[`TreeDataProvider getRootNodes returns presentation manager result 1`] = `
Array [
  Object {
    "checkBoxState": 1,
    "description": "",
    "displayCheckBox": true,
    "extendedData": Object {
      "key": Object {
        "instanceKey": Object {
          "className": "invoice",
          "id": "0x7b87000000da88",
        },
        "pathFromRoot": Array [
          "024a20b7-2bb8-4494-a62e-693a6a8b8195",
          "c178f4ea-9c38-4231-81ba-f354563fe450",
        ],
        "type": "ECInstanceNode",
      },
    },
    "hasChildren": false,
    "id": "c178f4ea-9c38-4231-81ba-f354563fe450/024a20b7-2bb8-4494-a62e-693a6a8b8195",
    "isCheckBoxEnabled": false,
    "label": "payment Personal Loan Account",
    "labelBackColor": 258423039,
    "labelBold": false,
    "labelForeColor": undefined,
    "labelItalic": false,
    "parentId": undefined,
  },
  Object {
    "checkBoxState": 0,
    "description": "Sunt accusantium soluta nisi sunt ut.",
    "displayCheckBox": true,
    "extendedData": Object {
      "key": Object {
        "instanceKey": Object {
          "className": "Frozen",
          "id": "0xb6170000007d71",
        },
        "pathFromRoot": Array [
          "ba59b9ca-c108-4e77-9c7a-76eb4fe14056",
          "4ac5919d-9414-4ede-8b7a-ce31c14ff29b",
        ],
        "type": "ECInstanceNode",
      },
    },
    "hasChildren": true,
    "id": "4ac5919d-9414-4ede-8b7a-ce31c14ff29b/ba59b9ca-c108-4e77-9c7a-76eb4fe14056",
    "isCheckBoxEnabled": true,
    "label": "Car invoice Incredible",
    "labelBackColor": undefined,
    "labelBold": false,
    "labelForeColor": 1309790719,
    "labelItalic": false,
    "parentId": undefined,
  },
]
`;
